Fix badge-description spacing in RadioCard
When a badge exists, the spacing between badge and description is `12px`.

When the badge doesn't exist the spacing between label and description is `8px`

To match these rules we adjust the CSS properties accordingly and try to rely on margin-bottom only, especially when dealing with spacing between optional elements.

--- a/packages/components/app/styles/components/form/radio-card.scss
+++ b/packages/components/app/styles/components/form/radio-card.scss
@@ -110,7 +110,7 @@
   padding: var(--token-form-radiocard-content-padding);
 
   .hds-badge {
-    margin-bottom: 8px;
+    margin-bottom: 12px;
   }
 }
 
@@ -126,7 +126,6 @@
 
 .hds-form-radio-card__description {
   display: block;
-  margin-top: 12px;
   color: var(--token-form-helper-text-color);
 }
 
